--- a/config.yaml
+++ b/config.yaml
@@ -7,14 +7,14 @@
 # ============================================================================
 
 # Path to the node JSONL file
-node_file: "robokop/nodes.jsonl"
+node_file: "/workspace/data/robokop/nodes.jsonl"
 
 # Path to the edges JSONL file
-edges_file: "robokop/edges.jsonl"
+edges_file: "/workspace/data/robokop/edges.jsonl"
 
 # Subgraph filtering style (determines output directory structure)
 # Valid options: original, CD, CCGGDD, CGGD, rCD, keepall, CGGD_alltreat
-# Output directory will be: robokop/{style}/
+# Output directory will be: /workspace/data/robokop/{style}/
 style: "CGGD_alltreat"
 
 # ============================================================================
@@ -130,32 +130,32 @@ tracin_max_test_triples: 100
 # Output Configuration
 # ============================================================================
 
-# All outputs will be organized under robokop/{style}/ directory:
-# - robokop/{style}/rotorobo.txt              : Subgraph triples
-# - robokop/{style}/edge_map.json             : Edge predicate mapping
-# - robokop/{style}/test.txt                  : DrugMechDB test edges
-# - robokop/{style}/train_candidates.txt      : Subgraph with test edges removed
-# - robokop/{style}/test_statistics.json      : Statistics about test set
-# - robokop/{style}/processed/                : Preprocessed data and dictionaries
-# - robokop/{style}/train.tsv|valid.tsv|test.tsv : Data splits
-# - robokop/{style}/models/conve/             : Trained model files
+# All outputs will be organized under /workspace/data/robokop/{style}/ directory:
+# - /workspace/data/robokop/{style}/rotorobo.txt              : Subgraph triples
+# - /workspace/data/robokop/{style}/edge_map.json             : Edge predicate mapping
+# - /workspace/data/robokop/{style}/test.txt                  : DrugMechDB test edges
+# - /workspace/data/robokop/{style}/train_candidates.txt      : Subgraph with test edges removed
+# - /workspace/data/robokop/{style}/test_statistics.json      : Statistics about test set
+# - /workspace/data/robokop/{style}/processed/                : Preprocessed data and dictionaries
+# - /workspace/data/robokop/{style}/train.tsv|valid.tsv|test.tsv : Data splits
+# - /workspace/data/robokop/{style}/models/conve/             : Trained model files
 #   - best_model.pt                           : Best model checkpoint (based on validation MRR)
 #   - final_model.pt                          : Final model after all epochs
 #   - config.json                             : Training configuration
 #   - test_results.json                       : Test set evaluation results
 #   - training_history.json                   : Training loss and validation metrics per epoch
 #   - checkpoints/                            : Intermediate checkpoints every N epochs
-# - robokop/{style}/results/mechanistic_paths/ : Mechanistic path results
-# - robokop/{style}/results/evaluation/       : Model evaluation results
+# - /workspace/data/robokop/{style}/results/mechanistic_paths/ : Mechanistic path results
+# - /workspace/data/robokop/{style}/results/evaluation/       : Model evaluation results
 #   - test_scores.json                        : Test scores in original order (with entity names)
 #   - test_scores.csv                         : Test scores in CSV format
 #   - test_scores_ranked.json                 : Test scores ranked by score (descending)
 #   - test_scores_ranked.csv                  : Ranked scores in CSV format
 #   - test_scores_top{N}.txt                  : Top N triples in TSV format (if top_n_triples configured)
-# - robokop/{style}/results/tracin/           : TracIn analysis results
-# - robokop/{style}/logs/                     : Execution logs for each step
+# - /workspace/data/robokop/{style}/results/tracin/           : TracIn analysis results
+# - /workspace/data/robokop/{style}/logs/                     : Execution logs for each step
 #
-# Example: If style = "CGGD_alltreat", all outputs go to robokop/CGGD_alltreat/
+# Example: If style = "CGGD_alltreat", all outputs go to /workspace/data/robokop/CGGD_alltreat/
 
 # ============================================================================
 # Advanced Configuration
