--- a/config.yaml
+++ b/config.yaml
@@ -99,7 +99,7 @@ use_gpu: true
 
 # Checkpoint configuration
 checkpoint_frequency: 2  # Save checkpoint every N epochs
-checkpoint_dir: null  # Custom checkpoint directory (null = use default: {output_dir}/checkpoints)
+checkpoint_dir: "/workspace/data/robokop/CGGD_alltreat/models/conve/checkpoints"  # Custom checkpoint directory (null = use default: {output_dir}/checkpoints)
 num_workers: 4  # Number of data loader workers (for train_pytorch.py only)
 
 # ============================================================================
