--- a/config.yaml
+++ b/config.yaml
@@ -107,7 +107,7 @@ use_gpu: true
 
 # Checkpoint configuration
 checkpoint_frequency: 2  # Save checkpoint every N epochs (1 = save after every epoch)
-checkpoint_dir: "/projects/aixb/jchung/everycure/influence_estimate/robokop/CCGGDD_alltreat/models/conve/checkpoints"  # Custom checkpoint directory (null = use default: {output_dir}/checkpoints)
+checkpoint_dir: "models/conve/checkpoints"  # Relative to {BASE_DIR}/{style}/ (null = use default: {output_dir}/checkpoints)
 num_workers: 4  # Number of data loader workers (for train_pytorch.py only)
 
 # ============================================================================
